# programmable-manufacturing-lab

./: CONTRIBUTING.md  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: benchmark-proposal.md  documentation-improvement.md  manufacturing-failure-mode.md  readiness-feedback.md
benchmarks/toy-process-window/: README.md
benchmarks/toy-process-window/industrial-world-model/: README.md  pyproject.toml  requirements.txt
benchmarks/toy-process-window/industrial-world-model/examples/: plot_uncertainty_calibration.py  run_demo.py  run_tool_wear.py
benchmarks/toy-process-window/industrial-world-model/notebooks/: demo.ipynb
benchmarks/toy-process-window/industrial-world-model/src/imwm/: __init__.py  core.py  data.py  evaluation.py  physics.py  planning.py  training.py  visualization.py
benchmarks/toy-process-window/industrial-world-model/src/imwm/envs/: __init__.py  tool_wear.py  toy_process.py
benchmarks/toy-process-window/industrial-world-model/src/imwm/models/: __init__.py  rssm.py
benchmarks/toy-process-window/industrial-world-model/src/imwm/scripts/: train_world_model.py
benchmarks/toy-process-window/industrial-world-model/tests/: test_shapes.py  test_tool_wear_env.py
community/: contribution-ideas.md  discussion-prompts.md  roadmap.md
docs/: decision-layer-primer.md  glossary.md  manufacturing-ai-readiness.md  physical-ai-stack.md  programmable-manufacturing.md
templates/: pilot-definition-template.md  process-mapping-template.md  readiness-scorecard.md
